--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
             <li>Literatura Brasileira</li>
             <li>Redação</li>
         </ul>
-        
         <p>Esta página foi criada para auxiliar o seu aprendizado. Aproveite o conteúdo!</p>
+         <blockquote>
     </div>
-
+    
     <div class="watermark"> colar atividade Aqui</div>
+       </blockquote>
 </body>
 </html>
